2014-09-10  Jon Honeycutt  <jhoneycutt@apple.com>

        Re-add the request autocomplete feature

        <https://bugs.webkit.org/show_bug.cgi?id=136730>

        This feature was rolled out in r148731 because it was only used by
        Chromium. As we consider supporting this feature, roll it back in, but
        leave it disabled.

        This rolls out r148731 (which removed the feature) with small changes
        needed to make the code build in ToT, to match modern style, to make
        the tests run, and to remove unused code.

        Reviewed by Andy Estes.

        Tests: fast/events/constructors/autocomplete-error-event-constructor.html
               fast/forms/form-request-autocomplete.html

        * Configurations/FeatureDefines.xcconfig:
        * DerivedSources.make:
        * WebCore.xcodeproj/project.pbxproj:
        * dom/AutocompleteErrorEvent.h: Added.
        (WebCore::AutocompleteErrorEvent::create):
        (WebCore::AutocompleteErrorEvent::reason):
        (WebCore::AutocompleteErrorEvent::AutocompleteErrorEvent):
        * dom/AutocompleteErrorEvent.idl: Added.
        * dom/EventNames.h:
        * dom/EventNames.in:
        * html/HTMLAttributeNames.in:
        * html/HTMLFormElement.cpp:
        (WebCore::HTMLFormElement::HTMLFormElement):
        (WebCore::HTMLFormElement::requestAutocomplete):
        (WebCore::HTMLFormElement::finishRequestAutocomplete):
        (WebCore::HTMLFormElement::requestAutocompleteTimerFired):
        (WebCore::HTMLFormElement::parseAttribute):
        * html/HTMLFormElement.h:
        * html/HTMLFormElement.idl:
        * loader/EmptyClients.h:
        * loader/FrameLoaderClient.h:
        * page/DOMWindow.idl:

2014-09-12  Vivek Galatage  <vivek.vg@samsung.com>

        CanvasRenderingContext2D should update the computed style while setting the font
        https://bugs.webkit.org/show_bug.cgi?id=136737

        Reviewed by Darin Adler.
